--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "Samsung >= 5"
   ],
   "dependencies": {
+    "axios": "^0.21.1",
     "dom7": "^3.0.0",
     "framework7": "^6.2.0",
     "framework7-icons": "^5.0.3",
@@ -27,7 +28,8 @@
     "material-icons": "^1.1.1",
     "skeleton-elements": "^3.4.0",
     "swiper": "^6.8.1",
-    "vue": "^3.2.2"
+    "vue": "^3.2.2",
+    "vue-i18n": "^9.1.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.4.0",
