--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.2.2",
+    "autoprefixer": "^10.3.2",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
+    "postcss": "^8.3.6",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.37.5",
+    "tailwindcss": "^2.2.7",
     "vite": "^2.4.4",
     "workbox-cli": "^6.2.4"
   }
