--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "axios": "^0.26.1",
+    "dayjs": "^1.11.0",
     "dom7": "^3.0.0",
     "framework7": "^6.3.4",
     "framework7-icons": "^5.0.3",
