--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "skeleton-elements": "^3.5.0",
     "swiper": "^6.8.4",
     "tailwindcss": "^3.0.23",
+    "vue-chart-3": "^3.1.8",
     "vue-i18n": "^9.2.0-beta.33"
   },
   "devDependencies": {
