--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "cross-env NODE_ENV=development vite",
     "build": "cross-env NODE_ENV=production vite build && npx workbox generateSW workbox-config.js",
     "postinstall": "cpy ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy ./node_modules/material-icons/iconfont/*.* ./src/fonts/",
+    "deploy" : "aws s3 sync ./www s3://problematorpws --delete",
     "lint": "eslint --ext .js,.jsx ."
   },
   "browserslist": [
