--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cross-env NODE_ENV=development vite",
     "build": "cross-env NODE_ENV=production vite build && npx workbox generateSW workbox-config.js",
     "postinstall": "cpy ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy ./node_modules/material-icons/iconfont/*.* ./src/fonts/",
-    "deploy" : "aws s3 sync ./www s3://problematorpws --delete",
+    "deploy": "aws s3 sync ./www s3://problematorpws --delete",
     "lint": "eslint --ext .js,.jsx ."
   },
   "browserslist": [
@@ -22,6 +22,7 @@
     "Samsung >= 5"
   ],
   "dependencies": {
+    "@auth0/auth0-vue": "^1.0.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
     "dom7": "^3.0.0",
