--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development vite",
     "build": "cross-env NODE_ENV=production vite build && npx workbox generateSW workbox-config.js",
+    "builddev": "cross-env NODE_ENV=development vite build && npx workbox generateSW workbox-config.js",
     "postinstall": "cpy ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy ./node_modules/material-icons/iconfont/*.* ./src/fonts/",
-    "deploy": "aws s3 sync ./www s3://problematorpws --delete",
+    "deploy": "aws s3 sync ./www s3://problematorpws --delete && aws cloudfront create-invalidation --distribution-id EA0UQAAMYCBH9 --paths '/*'",
     "lint": "eslint --ext .js,.jsx ."
   },
   "browserslist": [
