WIP with settings page. Changed manifest.json settings. Added splash screen.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Backlogger",
-  "short_name": "Backlogger",
-  "description": "Backlogger",
+  "name": "Problemator",
+  "short_name": "Problemator",
+  "description": "Problemator",
   "lang": "en-US",
   "start_url": "/",
   "display": "standalone",
