--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "Samsung >= 5"
   ],
   "dependencies": {
-    "@auth0/auth0-vue": "^1.0.0",
+    "@auth0/auth0-vue": "^1.0.2",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
     "dom7": "^3.0.0",
+    "dotenv": "^16.0.3",
     "framework7": "^6.3.4",
     "framework7-icons": "^5.0.3",
     "framework7-vue": "^6.3.16",
