--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "swiper": "^6.8.4",
     "tailwindcss": "^3.0.23",
     "v-calendar": "^3.0.0-alpha.8",
+    "vue": "^3.2.40",
     "vue-chart-3": "^3.1.8",
     "vue-i18n": "^9.2.0-beta.33",
     "vue3-qrcode-reader": "^0.0.1"
