--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framework7": "^6.3.4",
     "framework7-icons": "^5.0.3",
     "framework7-vue": "^6.3.16",
+    "lodash": "^4.17.21",
     "material-icons": "^1.2.1",
     "rxjs": "^7.5.5",
     "skeleton-elements": "^3.5.0",
@@ -40,7 +41,8 @@
     "vue": "^3.2.40",
     "vue-chart-3": "^3.1.8",
     "vue-i18n": "^9.2.0-beta.33",
-    "vue3-qrcode-reader": "^0.0.1"
+    "vue3-qrcode-reader": "^0.0.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.4",
