--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.40",
     "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^4.1.2",
     "vue-i18n": "^9.2.0-beta.33",
     "vue3-qrcode-reader": "^0.0.1",
     "vuex": "^4.0.2"
