--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "@auth0/auth0-vue": "^1.0.2",
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
     "dom7": "^3.0.0",
