--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "swiper": "^6.8.4",
     "tailwindcss": "^3.0.23",
     "v-calendar": "^3.0.0-alpha.8",
+    "vite-plugin-package-version": "^1.0.2",
     "vue": "^3.2.40",
     "vue-chart-3": "^3.1.8",
     "vue-chartjs": "^4.1.2",
@@ -47,7 +48,9 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.4",
+    "@types/node": "^18.11.0",
+    "@vitejs/plugin-basic-ssl": "^0.1.2",
+    "@vitejs/plugin-vue": "^3.1.2",
     "autoprefixer": "^10.4.4",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
@@ -60,7 +63,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.0",
     "rollup-plugin-framework7": "^1.2.0",
-    "vite": "^2.5.7",
+    "vite": "^3.1.8",
     "workbox-cli": "^6.3.0"
   }
 }
