--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^2.4.0",
     "rollup-plugin-framework7": "^1.2.0",
     "vite": "^3.1.8",
+    "vite-plugin-environment": "^1.1.2",
     "workbox-cli": "^6.3.0"
   }
 }
