--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "less": "^4.1.1",
+    "node-sass": "^7.0.3",
     "postcss": "^8.4.12",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.0",
     "rollup-plugin-framework7": "^1.2.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "vite": "^3.1.8",
     "vite-plugin-environment": "^1.1.2",
     "workbox-cli": "^6.3.0"
