Added country list

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Problemator",
   "private": true,
-"version": "0.8.32",
+  "version": "0.8.32",
   "description": "Problemator is an app for tracking your climbing",
   "repository": "",
   "license": "UNLICENSED",
@@ -26,6 +26,7 @@
     "@auth0/auth0-vue": "^1.0.2",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^0.26.1",
+    "country-list": "^2.2.0",
     "d3": "^7.6.1",
     "dayjs": "^1.11.0",
     "dom7": "^3.0.0",
