--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Problemator",
   "private": true,
-"version": "0.8.35",
+  "version": "0.8.35",
   "description": "Problemator is an app for tracking your climbing",
   "repository": "",
   "license": "UNLICENSED",
@@ -46,6 +46,7 @@
     "vue-chart-3": "^3.1.8",
     "vue-chartjs": "^4.1.2",
     "vue-i18n": "^9.2.0-beta.33",
+    "vue-select": "^4.0.0-beta.6",
     "vue3-qrcode-reader": "^0.0.1",
     "vuex": "^4.0.2"
   },
