--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Problemator",
   "private": true,
-"version": "1.0.9",
+  "version": "1.0.10",
   "description": "Problemator is an app for tracking your climbing",
   "repository": "",
   "license": "UNLICENSED",
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/vue-query": "^5.92.9",
     "axios": "^0.26.1",
     "country-list": "^2.2.0",
     "d3": "^7.6.1",
