feat: Added attributes radar chart

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/vue-query": "^5.92.9",
     "axios": "^0.26.1",
+    "chart.js": "^3.9.1",
     "country-list": "^2.2.0",
     "d3": "^7.6.1",
     "dayjs": "^1.11.0",
